// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SequenceView component should render SequenceInfo with provided sequence info (canonical) 1`] = `
<DocumentFragment>
  <div
    class="info-list "
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Length
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        100
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Mass (Da)
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        100,000
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Last updated
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        Some date
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Checksum
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        ABCSSDDD
      </div>
    </div>
  </div>
  <div
    class="action-bar button-group"
  >
    <div
      class="dropdown-container"
    >
      <button
        class="button dropdown "
        type="button"
      >
        Tools
      </button>
      <div
        class="dropdown-menu"
        style="top: 0px;"
      >
        <ul
          class="no-bullet"
        >
          <li>
            <button
              class="button tertiary"
              type="button"
            >
              BLAST
            </button>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//protparam/protparam?Isoform"
              rel="noopener noreferrer"
              target="_blank"
            >
              ProtParam
            </a>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//protscale/protscale.pl?Isoform"
              rel="noopener noreferrer"
              target="_blank"
            >
              ProtScale
            </a>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//compute_pi/pi_tool?Isoform"
              rel="noopener noreferrer"
              target="_blank"
            >
              Compute pI/Mw
            </a>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//peptide_mass/peptide-mass.pl?Isoform"
              rel="noopener noreferrer"
              target="_blank"
            >
              PeptideMass
            </a>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//peptide_cutter/peptidecutter.pl?Isoform"
              rel="noopener noreferrer"
              target="_blank"
            >
              PeptideCutter
            </a>
          </li>
        </ul>
      </div>
    </div>
    <a
      class="button"
      download=""
      href="/uniprotkb/accession/Isoform.fasta"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 32 32"
      >
        <path
          d="M27.6 21h3.9v7.7H.5v-7.8h3.9v4h23.2v-4zm-3.9-9.7L16 22.9 8.2 11.3h5.9V1.6h3.8v9.7h5.9z"
        />
      </svg>
      Download
    </a>
    <div
      class="dropdown-container"
    >
      <button
        class="button dropdown "
        type="button"
      >
        Highlight
      </button>
      <div
        class="dropdown-menu"
        style="top: 0px;"
      >
        <div
          class="dropdown-menu__content"
        >
          <label
            for="Isoform-Polar"
          >
            <input
              data-testid="sequence-highlight-checkbox"
              id="Isoform-Polar"
              type="checkbox"
            />
            Polar
          </label>
          <label
            for="Isoform-Hydrophobic"
          >
            <input
              data-testid="sequence-highlight-checkbox"
              id="Isoform-Hydrophobic"
              type="checkbox"
            />
            Hydrophobic
          </label>
        </div>
      </div>
    </div>
    <button
      class="button"
      type="button"
    >
      Copy sequence
    </button>
  </div>
  <div
    class="sequence"
  >
    <div
      class="sequence__sequence"
    >
      <span
        class="sequence__sequence__chunk"
      >
        <svg
          height="30"
          width="100"
        >
          <text
            class="sequence__sequence__chunk__counter"
            x="100"
            y="10"
          />
          <text
            class="sequence__sequence__chunk__sequence"
            x="0"
            y="20"
          >
            ABCD
          </text>
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SequenceView component should render SequenceView 1`] = `
<DocumentFragment>
  <div
    class="info-list "
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Sequence status
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        Sequence status
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Sequence processing
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        Sequence processing
      </div>
    </div>
  </div>
  <p>
    This entry describes 
    <strong>
      1
    </strong>
     isoforms produced by 
    <strong>
      event 1 & event 2
    </strong>
    .
  </p>
  <p>
    some text
  </p>
  <hr />
  <h3
    id="P05067-1"
  >
    P05067-1
  </h3>
  <p>
    This isoform has been chosen as the 
    <strong>
      canonical
    </strong>
     sequence. All positional information in this entry refers to it. This is also the sequence that appears in the downloadable versions of the entry.
  </p>
  <div
    class="info-list "
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Name
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        APP770
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Synonyms
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        PreA4 770
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Note
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        A major isoform.
      </div>
    </div>
  </div>
  <div
    class="info-list "
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Length
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        1234
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Mass (Da)
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        5,678
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Last updated
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        12/04/2010
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Checksum
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        ASSDFFFDSAASDDSDFSASDF
      </div>
    </div>
  </div>
  <div
    class="action-bar button-group"
  >
    <div
      class="dropdown-container"
    >
      <button
        class="button dropdown "
        type="button"
      >
        Tools
      </button>
      <div
        class="dropdown-menu"
        style="top: 0px;"
      >
        <ul
          class="no-bullet"
        >
          <li>
            <button
              class="button tertiary"
              type="button"
            >
              BLAST
            </button>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//protparam/protparam?P05067"
              rel="noopener noreferrer"
              target="_blank"
            >
              ProtParam
            </a>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//protscale/protscale.pl?P05067"
              rel="noopener noreferrer"
              target="_blank"
            >
              ProtScale
            </a>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//compute_pi/pi_tool?P05067"
              rel="noopener noreferrer"
              target="_blank"
            >
              Compute pI/Mw
            </a>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//peptide_mass/peptide-mass.pl?P05067"
              rel="noopener noreferrer"
              target="_blank"
            >
              PeptideMass
            </a>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//peptide_cutter/peptidecutter.pl?P05067"
              rel="noopener noreferrer"
              target="_blank"
            >
              PeptideCutter
            </a>
          </li>
        </ul>
      </div>
    </div>
    <a
      class="button"
      download=""
      href="/uniprotkb/accession/P05067.fasta"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 32 32"
      >
        <path
          d="M27.6 21h3.9v7.7H.5v-7.8h3.9v4h23.2v-4zm-3.9-9.7L16 22.9 8.2 11.3h5.9V1.6h3.8v9.7h5.9z"
        />
      </svg>
      Download
    </a>
    <div
      class="dropdown-container"
    >
      <button
        class="button dropdown "
        type="button"
      >
        Highlight
      </button>
      <div
        class="dropdown-menu"
        style="top: 0px;"
      >
        <div
          class="dropdown-menu__content"
        >
          <label
            for="P05067-Polar"
          >
            <input
              data-testid="sequence-highlight-checkbox"
              id="P05067-Polar"
              type="checkbox"
            />
            Polar
          </label>
          <label
            for="P05067-Hydrophobic"
          >
            <input
              data-testid="sequence-highlight-checkbox"
              id="P05067-Hydrophobic"
              type="checkbox"
            />
            Hydrophobic
          </label>
        </div>
      </div>
    </div>
    <button
      class="button"
      type="button"
    >
      Copy sequence
    </button>
  </div>
  <div
    class="sequence"
  >
    <div
      class="sequence__sequence"
    >
      <span
        class="sequence__sequence__chunk"
      >
        <svg
          height="30"
          width="100"
        >
          <text
            class="sequence__sequence__chunk__counter"
            x="100"
            y="10"
          >
            10
          </text>
          <text
            class="sequence__sequence__chunk__sequence"
            x="0"
            y="20"
          >
            ATGHASOADS
          </text>
        </svg>
      </span>
      <span
        class="sequence__sequence__chunk"
      >
        <svg
          height="30"
          width="100"
        >
          <text
            class="sequence__sequence__chunk__counter"
            x="100"
            y="10"
          >
            20
          </text>
          <text
            class="sequence__sequence__chunk__sequence"
            x="0"
            y="20"
          >
            DKDSAJALDS
          </text>
        </svg>
      </span>
      <span
        class="sequence__sequence__chunk"
      >
        <svg
          height="30"
          width="100"
        >
          <text
            class="sequence__sequence__chunk__counter"
            x="100"
            y="10"
          >
            30
          </text>
          <text
            class="sequence__sequence__chunk__sequence"
            x="0"
            y="20"
          >
            AMCMnDSKMD
          </text>
        </svg>
      </span>
      <span
        class="sequence__sequence__chunk"
      >
        <svg
          height="30"
          width="100"
        >
          <text
            class="sequence__sequence__chunk__counter"
            x="100"
            y="10"
          />
          <text
            class="sequence__sequence__chunk__sequence"
            x="0"
            y="20"
          >
            SKNCSAKN
          </text>
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
